--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "generate:sitemap": "node -r ts-node/register ./utils/generateSitemap.ts",
+    "generate:favicons": "node ./scripts/generateFavicons.js",
+    "prebuild": "npm run generate:sitemap && npm run generate:favicons"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
@@ -48,6 +51,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
-    "jest": "^29.7.0"
+    "globby": "^14.0.2",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
+    "sharp": "^0.33.5"
   }
 }
