--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 RESEND_API_KEY=re_3Rg1MCjM_J9c3M9pVevDzxBHJyMnU4k4m
-NEXT_PUBLIC_SITE_URL=https://romainboboe.com
+
 CONTACT_FORM_EMAIL=hi@romainboboe.com
+
+NEXT_PUBLIC_SITE_URL=https://romainboboe.com
+NEXT_PUBLIC_API_URL=http://localhost:3000
