--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "18.15.3",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -45,16 +44,18 @@
     "remark-gfm": "^3.0.1",
     "resend": "^4.1.1",
     "tailwind-merge": "^1.10.0",
-    "tailwindcss": "3.2.7",
-    "typescript": "5.0.2"
+    "tailwindcss": "3.2.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.7",
     "globby": "^14.0.2",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
