--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ RESEND_API_KEY=re_3Rg1MCjM_J9c3M9pVevDzxBHJyMnU4k4m
 CONTACT_FORM_EMAIL=hi@romainboboe.com
 
 NEXT_PUBLIC_SITE_URL=https://romainboboe.com
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=https://romainboboe.com
