Fixing contact form

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ RESEND_API_KEY=re_3Rg1MCjM_J9c3M9pVevDzxBHJyMnU4k4m
 
 CONTACT_FORM_EMAIL=hi@romainboboe.com
 
-NEXT_PUBLIC_SITE_URL=https://romainboboe.com
-NEXT_PUBLIC_API_URL=https://romainboboe.com
+CopyInsert
+NEXT_PUBLIC_API_URL=https://www.romainboboe.com
+NEXT_PUBLIC_SITE_URL=https://www.romainboboe.com
