Changin button style and csp

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ CONTACT_FORM_EMAIL=hi@romainboboe.com
 
 NEXT_PUBLIC_API_URL=https://www.romainboboe.com
 NEXT_PUBLIC_SITE_URL=https://www.romainboboe.com
+
+LINK=http://localhost:5173/dist/now-widget.js
