--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "feed": "^4.2.2",
