fix: update contact form to use verified domain

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ NEXT_PUBLIC_API_URL=https://www.romainboboe.com
 NEXT_PUBLIC_SITE_URL=https://www.romainboboe.com
 
 LINK=http://localhost:5173/dist/now-widget.js
+
+VERIFIED_DOMAIN=romainboboe.com
